<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/menu_list"
    android:layout_above="@+id/bottomBar"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true"
    android:layout_margin="5dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView style="@style/home_menu"  android:text="@string/profile" />
    <TextView style="@style/home_menu" android:id="@+id/about" android:text="@string/about" />
    <TextView style="@style/home_menu" android:onClick="logout" android:text="@string/logout" />
    <TextView style="@style/home_menu" android:id="@+id/change_log" android:text="@string/log" />
</LinearLayout>