<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/darkback">
    <TextView
        android:text="Select Option to Continue :"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:padding="10dp"
        android:id="@+id/na"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_below="@+id/na"
        android:orientation="vertical"
        android:id="@+id/Dia_roomholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/home_menu"
            android:layout_margin="5dp"
            android:background="@drawable/smart_config_form_bg"
            android:onClick="delete"
            android:id="@+id/delete"
            android:text="@string/delete" />
        <TextView style="@style/home_menu"
            android:layout_margin="5dp"
            android:background="@drawable/smart_config_form_bg"
            android:onClick="rename"
            android:id="@+id/rename"
            android:text="@string/rename" />
        <TextView
            style="@style/home_menu"
            android:layout_margin="5dp"
            android:background="@drawable/smart_config_form_bg"
            android:onClick="changeroom"
            android:id="@+id/changeroom"
            android:text="@string/move_to" />
        <TextView style="@style/home_menu"
            android:layout_margin="5dp"
            android:background="@drawable/smart_config_form_bg"
            android:onClick="schedules"
            android:id="@+id/schedules"
            android:text="@string/schedule" />

    </LinearLayout>


    <!-- <include layout="@layout/card_rooms" />

     <include layout="@layout/card_rooms" />-->


</RelativeLayout>