<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:padding="10dp">
    <LinearLayout
        android:id="@+id/date_picker"
        android:orientation="vertical"
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:text="Date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:gravity="center"
               android:text="@string/day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"/>

            <TextView
                android:gravity="center"
                android:text="@string/month"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"/>

            <TextView
                android:gravity="center"
                android:text="@string/year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <com.wx.wheelview.widget.WheelView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"/>

            <com.wx.wheelview.widget.WheelView
                android:id="@+id/month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"/>

            <com.wx.wheelview.widget.WheelView
                android:id="@+id/year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/done"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/reg_buttons"
        android:padding="10dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_below="@+id/date_picker"
        android:textAllCaps="true"
        android:text="DONE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>